Sim/src/ui/css/containers.css
/* Main panel positions */
.gui-container-left {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-content: flex-start;
  margin-bottom: 8px;
}

.gui-container-right {
  position: absolute;
  top: 0;
  right: 0;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-content: flex-start;
}

.gui-container-center {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
}

/* New symmetrical positioning classes - accounting for side panels */
.gui-container-left-middle {
  position: absolute;
  top: 0;
  left: 22%;
  /* transform: translateX(-50%);   */
}

.gui-container-left-center {
  position: absolute;
  top: 0;
  left: 35%;
  /* transform: translateX(-50%);   */
}

.gui-container-right-center {
  position: absolute;
  top: 0;
  right: 35%;
  /* transform: translateX(-50%);   */
}

.gui-container-right-middle {
  position: absolute;
  top: 0;
  right: 22%;
  /* transform: translateX(-50%);   */
}

.gui-container-center {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
}

.gui-container-left-bottom {
  position: absolute;
  top: 400px;
  left: 0;
}

.gui-container-middle {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
}

.gui-container-middle-bottom {
  position: absolute;
  top: 100px;
  left: 50%;
  transform: translateX(-50%);
}

/* Stats container */
.stats-container {
  position: absolute;
  top: 0;
  right: 0;
}

.simulation-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
  background-color: #1a1a1a;
}

/* Class added to canvas parent for relative positioning of overlays */
.canvas-relative-container {
  position: relative;
}

